tests/out/error/result/or_returns_no_value.in.bt
fun result_fun() !i32 {
	return 1
}

a := result_fun() or {}

b := result_fun() or {
	panic(err)
}
